JumpScript/tests/baselines/reference/errorHandlingInInstanceOf.errors.txt
tests/cases/compiler/errorHandlingInInstanceOf.jump(1,5): error TS2304: Cannot find name 'x'.
tests/cases/compiler/errorHandlingInInstanceOf.jump(5,18): error TS2304: Cannot find name 'UnknownType'.


==== tests/cases/compiler/errorHandlingInInstanceOf.jump (2 errors) ====
    if (x instanceof String) {
        ~
!!! error TS2304: Cannot find name 'x'.
    }
    
    var y: any;
    if (y instanceof UnknownType) {
                     ~~~~~~~~~~~
!!! error TS2304: Cannot find name 'UnknownType'.
    }